# test-opengl

./: .clang-format  CMakeLists.txt  CMakePresets.json
app/: main.cpp
cmake/: OpenGLContent.cmake
